Open tmux windows and panes with current PWD.
- Also fix the new pane shortcuts:
    * prefix + p for a new vertical split
    * prefix + c for a new horizontal split

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -43,11 +43,11 @@ bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # create a new window with prefix + n
-bind-key -r n new-window
-# create a new vertical split pane with prefix + p
-bind-key -r p split-window -v
+bind-key -r n new-window -c "#{pane_current_path}"
 # create a new horizontal split pane with prefix + c
-bind-key -r c split-window -h
+bind-key -r c split-window -v -c "#{pane_current_path}"
+# create a new vertical split pane with prefix + p
+bind-key -r p split-window -h -c "#{pane_current_path}"
 
 # Status bar
 set -g status-bg black
