Make tmux resizing keybindings repeatable

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -26,10 +26,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # resize panes like vim
-bind < resize-pane -L 5
-bind > resize-pane -R 5
-bind - resize-pane -D 5
-bind + resize-pane -U 5
+bind -r < resize-pane -L 5
+bind -r > resize-pane -R 5
+bind -r - resize-pane -D 5
+bind -r + resize-pane -U 5
 
 # move between windows with prefix + (h|l)
 bind-key -r h select-window -t :-
