--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -32,6 +32,9 @@ bind -r - resize-pane -D 5
 bind -r + resize-pane -U 5
 
 # move between windows with prefix + (h|l)
+# TODO: set up move to previous window
+#   use v and h for splits
+#   use numbers for targeted jumping
 bind-key -r h select-window -t :-
 bind-key -r l select-window -t :+
 
