Improve tmux nav keybindings

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -11,7 +11,7 @@ set -g default-terminal 'screen-256color'
 # and issue list-keys -t vi-copy
 set-window-option -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
+# Press 'v' to begin selection and 'y' to copy to system clipboard
 bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
@@ -32,9 +32,6 @@ bind -r - resize-pane -D 5
 bind -r + resize-pane -U 5
 
 # move between windows with prefix + (h|l)
-# TODO: set up move to previous window
-#   use v and h for splits
-#   use numbers for targeted jumping
 bind-key -r h select-window -t :-
 bind-key -r l select-window -t :+
 
@@ -47,10 +44,10 @@ bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq v
 
 # create a new window with prefix + n
 bind-key -r n new-window -c "#{pane_current_path}"
-# create a new horizontal split pane with prefix + c
-bind-key -r c split-window -v -c "#{pane_current_path}"
-# create a new vertical split pane with prefix + p
-bind-key -r p split-window -h -c "#{pane_current_path}"
+# create a new horizontal split pane with prefix + k
+bind-key -r k split-window -v -c "#{pane_current_path}"
+# create a new vertical split pane with prefix + j
+bind-key -r j split-window -h -c "#{pane_current_path}"
 
 # Status bar
 set -g status-bg black
@@ -93,4 +90,5 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded."
 
 # -------------------------------------------------------------------
-
+# Center the window list
+set -g status-justify centre
