--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -1,7 +1,7 @@
-# Make Ctrl+Space the prefix key
+# Make Ctrl+a the prefix key
 unbind C-b
-set -g prefix C-Space
-bind Space send-prefix
+set -g prefix C-a
+bind C-a send-prefix
 
 # improve colors
 set -g default-terminal 'screen-256color'
