Use prefix + C-l to clear tmux screen

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -51,6 +51,8 @@ bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 
+# User prefix + C-l to clear the screen
+bind C-l send-keys 'C-l'
 
 # create a new window with prefix + n
 bind-key -r n new-window -c "#{pane_current_path}"
