--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -26,10 +26,10 @@ bind k select-pane -U
 bind l select-pane -R
 
 # resize panes like vim
-bind -r < resize-pane -L 5
-bind -r > resize-pane -R 5
-bind -r - resize-pane -D 5
-bind -r + resize-pane -U 5
+bind -r Left resize-pane -L 2
+bind -r Right resize-pane -R 2
+bind -r Down resize-pane -D 2
+bind -r Up resize-pane -U 2
 
 # move between windows with prefix + (h|l)
 bind-key -r h select-window -t :-
@@ -99,7 +99,7 @@ set -sg escape-time 0
 
 # Reload tmux config
 # bind r source-file ~/.tmux.conf
-bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded."
+bind r source-file ~/.tmux.conf \; display-message "Tmux configuration reloaded."
 
 # -------------------------------------------------------------------
 
