Have tmux start with zsh, new panes in PWD
- Set default shell for tmux

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -1,3 +1,6 @@
+# set shell
+set -g default-command 'zsh'
+
 # Make Ctrl+a the prefix key
 unbind C-b
 set -g prefix C-a
@@ -50,16 +53,16 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-
 # User prefix + C-l to clear the screen
 bind C-l send-keys 'C-l'
 
 # create a new window with prefix + n
-bind-key -r n new-window -c "#{pane_current_path}"
+# open new panes in same directory as current pane
+bind-key -r n new-window -c "$PWD"
 # create a new horizontal split pane with prefix + k
-bind-key -r k split-window -v -c "#{pane_current_path}"
+bind-key -r k split-window -v -c "$PWD"
 # create a new vertical split pane with prefix + j
-bind-key -r j split-window -h -c "#{pane_current_path}"
+bind-key -r j split-window -h -c "$PWD"
 
 # Status bar
 set -g status-bg black
@@ -67,6 +70,15 @@ set -g status-fg white
 set -g window-status-bg black
 set -g window-status-current-fg yellow
 set -g status-interval 10
+set -g status-left '#[fg=colour237]#I:#P'
+set -g status-left-length 50
+set -g status-right '#[fg=green]#(whoami)@#H'
+set -g status-utf8 on
+set -g window-status-bg black
+set -g window-status-current-bg black
+set -g window-status-current-fg yellow
+
+# Notify if other windows has activities
 set -g status-left-length 50
 
 # Message bar
@@ -86,10 +98,6 @@ set-window-option -g pane-base-index 1
 
 # renumber windows sequentially after closing any of them
 set -g renumber-windows on
-
-# remove administrative debris (session name, hostname, time) in status bar
-set -g status-left ''
-set -g status-right 'jkrmr'
 
 # increase scrollback to 10,000 lines
 set -g history-limit 10000
