--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -67,19 +67,17 @@ bind-key -r j split-window -h -c "$PWD"
 # Status bar
 set -g status-bg black
 set -g status-fg white
-set -g window-status-bg black
-set -g window-status-current-fg yellow
 set -g status-interval 10
 set -g status-left '#[fg=colour237]#I:#P'
 set -g status-left-length 50
-set -g status-right '#[fg=green]#(whoami)@#H'
+set -g status-right '#[fg=green]#(whoami)@#h'
 set -g status-utf8 on
 set -g window-status-bg black
 set -g window-status-current-bg black
 set -g window-status-current-fg yellow
 
 # Notify if other windows has activities
-set -g status-left-length 50
+set -g visual-activity on
 
 # Message bar
 set -g message-attr bright
