Have Git and Ag ignore shell completions, zsh syntax coloring

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,5 @@ home/pry/themes/monokai*
 home/pry/themes/vim*
 home/vim/.netrwhist
 home/vim/bundle/*
+home/zsh/zsh-syntax-highlighting/*
 yankring_history*
