--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "home/vim/bundle/Vundle.vim"]
 	path = home/vim/bundle/Vundle.vim
-	url = git@github.com:gmarik/Vundle.vim.git
+	url = https://github.com/gmarik/Vundle.vim.git
 [submodule "home/zsh/zsh-syntax-highlighting"]
 	path = home/zsh/zsh-syntax-highlighting
-	url = git@github.com:zsh-users/zsh-syntax-highlighting.git
+	url = https://github.com/zsh-users/zsh-syntax-highlighting.git
