Use transparent bg in tmux instead of black

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -65,15 +65,15 @@ bind-key -r k split-window -v -c "$PWD"
 bind-key -r j split-window -h -c "$PWD"
 
 # Status bar
-set -g status-bg black
+set -g status-bg default
 set -g status-fg white
 set -g status-interval 10
 set -g status-left '#[fg=colour237]#I:#P'
 set -g status-left-length 50
 set -g status-right '#[fg=green]#(whoami)@#h'
 set -g status-utf8 on
-set -g window-status-bg black
-set -g window-status-current-bg black
+set -g window-status-bg default
+set -g window-status-current-bg default
 set -g window-status-current-fg yellow
 
 # Notify if other windows has activities
@@ -81,7 +81,7 @@ set -g visual-activity on
 
 # Message bar
 set -g message-attr bright
-set -g message-bg black
+set -g message-bg default
 set -g message-fg blue
 set -g display-time 2000
 set -g display-panes-time 2000
