Open new tmux panes/windows in same directory as current

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -58,11 +58,11 @@ bind C-l send-keys 'C-l'
 
 # create a new window with prefix + n
 # open new panes in same directory as current pane
-bind-key -r n new-window -c "$PWD"
+bind-key -r n new-window -c "#{pane_current_path}"
 # create a new horizontal split pane with prefix + k
-bind-key -r k split-window -v -c "$PWD"
+bind-key -r k split-window -v -c "#{pane_current_path}"
 # create a new vertical split pane with prefix + j
-bind-key -r j split-window -h -c "$PWD"
+bind-key -r j split-window -h -c "#{pane_current_path}"
 
 # Status bar
 set -g status-bg default
