Add shell fuzzyfinder
- Disables screen-256color-italic in favor of screen-256color in
  tmux.conf in order to enable Ctrl+T search

- Fixes #8

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -7,7 +7,7 @@ set -g prefix C-a
 bind C-a send-prefix
 
 # improve colors
-set -g default-terminal 'screen-256color-italic'
+set -g default-terminal 'screen-256color'
 
 # User vim keybindings
 # For a full list, open the tmux command line with <prefix> :
