Add tmux keybinding to move windows

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -64,6 +64,11 @@ bind-key -r k split-window -v -c "#{pane_current_path}"
 # create a new vertical split pane with prefix + j
 bind-key -r j split-window -h -c "#{pane_current_path}"
 
+# swap windows left or right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
+
 # Status bar
 set -g status-bg default
 set -g status-fg white
