Move vim plugins to plugin/

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@ home/pry/themes/github*
 home/pry/themes/monokai*
 home/pry/themes/vim*
 home/vim/.netrwhist
-home/vim/bundle/*
+home/vim/plugins/*
 home/zsh/zsh-syntax-highlighting/*
 yankring_history*
