--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -71,7 +71,7 @@ bind-key -n C-S-Right swap-window -t +1
 
 # Status bar
 set -g status-bg default
-set -g status-fg white
+set -g status-fg colour237
 set -g status-interval 10
 set -g status-left '#[fg=colour237]#I:#P'
 set -g status-left-length 50
@@ -79,7 +79,7 @@ set -g status-right '#[fg=green]#(whoami)@#h'
 set -g status-utf8 on
 set -g window-status-bg default
 set -g window-status-current-bg default
-set -g window-status-current-fg yellow
+set -g window-status-current-fg blue
 
 # Notify if other windows has activities
 set -g visual-activity on
