Add tmux keybinding to break pane out into window
- Use prefix-b to break current pane out into its own window

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -112,5 +112,8 @@ set -sg escape-time 0
 # bind r source-file ~/.tmux.conf
 bind r source-file ~/.tmux.conf \; display-message "Tmux configuration reloaded."
 
+# Break current pane out to a new window
+bind-key b break-pane -d
+
 # -------------------------------------------------------------------
 
