Add choose-tree keybinding to select tmux session

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -115,5 +115,12 @@ bind r source-file ~/.tmux.conf \; display-message "Tmux configuration reloaded.
 # Break current pane out to a new window
 bind-key b break-pane -d
 
+# Jump between sessions easily
+# Hit `space` to unfold window list
+bind-key C-j choose-tree
+
+# Go back to previous pane
+# bind-key 
+
 # -------------------------------------------------------------------
 
