--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -9,7 +9,7 @@ bind C-a send-prefix
 # improve colors
 set -g default-terminal 'screen-256color'
 
-# User vim keybindings
+# Use vim keybindings
 # For a full list, open the tmux command line with <prefix> :
 # and issue list-keys -t vi-copy
 set-window-option -g mode-keys vi
@@ -23,29 +23,7 @@ unbind -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # move between panes using ctrl + (h|j|k|l)
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-# resize panes like vim
-bind -r Left resize-pane -L 2
-bind -r Right resize-pane -R 2
-bind -r Down resize-pane -D 2
-bind -r Up resize-pane -U 2
-
-# move between windows with prefix + (h|l)
-bind-key -r h select-window -t :-
-bind-key -r l select-window -t :+
-
-# # smart pane switching with awareness of vim splits
-# bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-h) || tmux select-pane -L"
-# bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-j) || tmux select-pane -D"
-# bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-k) || tmux select-pane -U"
-# bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys C-l) || tmux select-pane -R"
-# bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iq vim && tmux send-keys 'C-\\') || tmux select-pane -l"
-
-# Smart pane switching with awareness of vim splits
+# switch panes with awareness of vim splits
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
 bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
 bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
@@ -67,7 +45,6 @@ bind-key -r j split-window -h -c "#{pane_current_path}"
 # swap windows left or right
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
-
 
 # Status bar
 set -g status-bg default
@@ -118,9 +95,6 @@ bind-key b break-pane -d
 # Jump between sessions easily
 # Hit `space` to unfold window list
 bind-key C-j choose-tree
-
-# Go back to previous pane
-# bind-key 
 
 # -------------------------------------------------------------------
 
