Use C-S-l to jump to previously active tmux window

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -31,6 +31,19 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
+# move between windows with prefix + (h|l)
+bind-key -r h select-window -t :-
+bind-key -r l select-window -t :+
+
+# Use Ctrl + Shift + l to go to the last active window
+bind-key -n C-L last-window
+
+# resize panes like vim
+bind -r Left resize-pane -L 2
+bind -r Right resize-pane -R 2
+bind -r Down resize-pane -D 2
+bind -r Up resize-pane -U 2
+
 # User prefix + C-l to clear the screen
 bind C-l send-keys 'C-l'
 
