--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -31,12 +31,12 @@ bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
-# move between windows with prefix + (h|l)
-bind-key -r h select-window -t :-
-bind-key -r l select-window -t :+
+# move between windows with prefix + Ctrl+h / Ctrl+l
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
-# Use Ctrl + Shift + l to go to the last active window
-bind-key -n C-L last-window
+# Use prefix + Shift + l to go to the last active window
+bind-key -r l last-window
 
 # resize panes like vim
 bind -r Left resize-pane -L 2
@@ -44,8 +44,8 @@ bind -r Right resize-pane -R 2
 bind -r Down resize-pane -D 2
 bind -r Up resize-pane -U 2
 
-# User prefix + C-l to clear the screen
-bind C-l send-keys 'C-l'
+# User prefix + C-k ('kill') to clear the screen
+bind C-k send-keys 'C-l'
 
 # create a new window with prefix + n
 # open new panes in same directory as current pane
