--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -1,65 +1,32 @@
-# set shell
-set -g default-command 'zsh'
-
-# Make Ctrl+a the prefix key
+# prefix key: Ctrl+a
 unbind C-b
 set -g prefix C-a
-bind C-a send-prefix
+bind-key -r C-a send-prefix
 
 # improve colors
-set -g default-terminal 'screen-256color'
+set-option -g default-terminal "screen-256color"
 
-# Use vim keybindings
-# For a full list, open the tmux command line with <prefix> :
-# and issue list-keys -t vi-copy
-set-window-option -g mode-keys vi
+# reload tmux conf
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
-# Press 'v' to begin selection and 'y' to copy to system clipboard
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
+# increase scrollback to 10,000 lines
+set -g history-limit 10000
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
+# Restore clear screen keybind mapped over by tmux-navigator
+bind C-l send-keys C-l
 
-# move between panes using ctrl + (h|j|k|l)
-# switch panes with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+# No delay for escape key press
+set -sg escape-time 0
 
-# move between windows with prefix + Ctrl+h / Ctrl+l
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# number panes and windows starting at 1
+set-window-option -g pane-base-index 1
+set-option -g base-index 1
 
-# Use prefix + Shift + l to go to the last active window
-bind-key -r l last-window
+# renumber windows sequentially after closing any of them
+set-option -g renumber-windows on
 
-# resize panes like vim
-bind -r Left resize-pane -L 2
-bind -r Right resize-pane -R 2
-bind -r Down resize-pane -D 2
-bind -r Up resize-pane -U 2
 
-# User prefix + C-k ('kill') to clear the screen
-bind C-k send-keys 'C-l'
-
-# create a new window with prefix + n
-# open new panes in same directory as current pane
-bind-key -r n new-window -c "#{pane_current_path}"
-# create a new horizontal split pane with prefix + k
-bind-key -r k split-window -v -c "#{pane_current_path}"
-# create a new vertical split pane with prefix + j
-bind-key -r j split-window -h -c "#{pane_current_path}"
-
-# swap windows left or right
-bind-key -n C-S-Left swap-window -t -1
-bind-key -n C-S-Right swap-window -t +1
-
-# Status bar
+# -------- Statusbar settings ----------------------
 set -g status-bg default
 set -g status-fg colour237
 set -g status-interval 10
@@ -71,43 +38,107 @@ set -g window-status-bg default
 set -g window-status-current-bg default
 set -g window-status-current-fg blue
 
-# Notify if other windows has activities
-set -g visual-activity on
-
-# Message bar
+# message bar
 set -g message-attr bright
 set -g message-bg default
 set -g message-fg blue
 set -g display-time 2000
 set -g display-panes-time 2000
 
+# Notify if other windows has activities
+set -g visual-activity on
+
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-# start window numbers at 1 to match keyboard order with tmux window order
-set -g base-index 1
-set-window-option -g pane-base-index 1
 
-# renumber windows sequentially after closing any of them
-set -g renumber-windows on
+# -------- Keybinding settings ----------------------
+# Use emacs keybindings
+set-option -g status-keys "emacs"
 
-# increase scrollback to 10,000 lines
-set -g history-limit 10000
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
 
-# No delay for escape key press
-set -sg escape-time 0
+# Press 'v' to begin selection and 'y' to copy to system clipboard
+bind-key -t vi-copy v begin-selection
+bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Reload tmux config
-# bind r source-file ~/.tmux.conf
-bind r source-file ~/.tmux.conf \; display-message "Tmux configuration reloaded."
+# Update default binding of `Enter` to also use copy-pipe
+unbind -t vi-copy Enter
+bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-# Break current pane out to a new window
-bind-key b break-pane -d
 
+# -------- Session navigation ------------------------
 # Jump between sessions easily
 # Hit `space` to unfold window list
 bind-key C-j choose-tree
 
-# -------------------------------------------------------------------
+# fuzzy-select a session to switch to
+bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+
+# "break out" a session based on the current pane
+bind-key C-b send-keys 'tat & exit' 'C-m'
+
+# kill the current session and switch us to another session, keeping us
+# connected to tmux throughout.
+bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
+
+
+# -------- Window Creation / Navigation --------------
+# create a new window
+bind c new-window -c '#{pane_current_path}'
+
+# swap windows left or right
+bind-key -n C-S-Left swap-window -t -1
+bind-key -n C-S-Right swap-window -t +1
+
+# move between windows with prefix + Ctrl+h / Ctrl+l
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
+
+# Use prefix + Shift + l to go to the last active window
+bind-key -r l last-window
+
+# -------- Pane Creation / Navigation ----------------
+# create a vertically split pane
+bind-key - split-window -v  -c '#{pane_current_path}'
+
+# create a horizontally split pane
+bind-key \ split-window -h  -c '#{pane_current_path}'
+
+# pane navigation with awareness of vim splits
+# use Ctrl + hjkl\  (without prefix key)
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+
+
+# -------- Pane Management ---------------------------
+# resize panes with Shift + direction key
+bind -n S-Left resize-pane -L 2
+bind -n S-Right resize-pane -R 2
+bind -n S-Down resize-pane -D 1
+bind -n S-Up resize-pane -U 1
+
+# Break current pane out to a new window
+bind-key b break-pane -d
+
+# Prompted join-pane
+bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+
+# Easily swap a pane (targeted by pane number) with the current pane
+bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
+
+
+# -------- Convenience Shortcuts ----------------------
+bind-key h split-window -h "htop"
+bind-key t split-window -h -c ~/Documents "vim todo.md"
+bind-key w split-window -h -c ~/Documents/wiki "vim +CtrlP"
+
+
+# -----------------------------------------------------------------------
 
