--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -32,7 +32,7 @@ set -g status-fg colour237
 set -g status-interval 10
 set -g status-left '#[fg=colour237]#I:#P'
 set -g status-left-length 50
-set -g status-right '#[fg=green]#(whoami)@#h'
+set -g status-right '#[fg=blue]#S #[fg=colour220]jkrmr'
 set -g status-utf8 on
 set -g window-status-bg default
 set -g window-status-current-bg default
