--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ home/pry/themes/tomorrow*
 home/pry/themes/github*
 home/pry/themes/monokai*
 home/pry/themes/vim*
+home/emacs.d/elpa
 home/vim/.netrwhist
 home/vim/plugins/*
 home/zsh/zsh-syntax-highlighting/*
