Make tmux colors more solarized

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -27,16 +27,26 @@ set-option -g renumber-windows on
 
 
 # -------- Statusbar settings ----------------------
-set -g status-bg default
+set -g status-bg black
 set -g status-fg colour237
 set -g status-interval 10
-set -g status-left '#[fg=colour237]#I:#P'
+set -g status-left '#[fg=colour221]#I:#P'
 set -g status-left-length 50
-set -g status-right '#[fg=blue]#S #[fg=colour220]jkrmr'
+set -g status-right '#[fg=blue]#S #[fg=colour221]jkrmr'
 set -g status-utf8 on
 set -g window-status-bg default
 set -g window-status-current-bg default
 set -g window-status-current-fg blue
+
+# default window title colors
+set-window-option -g window-status-fg blue
+
+# pane border
+set-option -g pane-active-border-fg blue
+
+# pane number display
+set-option -g display-panes-active-colour blue
+set-option -g display-panes-colour brightred
 
 # message bar
 set -g message-attr bright
@@ -141,4 +151,5 @@ bind-key w split-window -h -c ~/Documents/wiki "vim +CtrlP"
 
 
 # -----------------------------------------------------------------------
+
 
