Make current window label more visible

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -36,7 +36,7 @@ set -g status-right '#[fg=blue]#S #[fg=colour221]jkrmr'
 set -g status-utf8 on
 set -g window-status-bg default
 set -g window-status-current-bg default
-set -g window-status-current-fg blue
+set -g window-status-current-fg colour222
 
 # default window title colors
 set-window-option -g window-status-fg blue
