--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *.secret
 *.secure
 *.lock
+.netrwhist
 home/pry/themes/pry*
 home/pry/themes/tomorrow*
 home/pry/themes/github*
@@ -8,7 +9,7 @@ home/pry/themes/monokai*
 home/pry/themes/vim*
 home/emacs.d/elpa
 home/lein/repl-history
-home/vim/.netrwhist
 home/vim/plugins/*
+home/vim/plugged/*
 home/vim/tmp/yankring_history_v2.txt
 home/zsh/zsh-syntax-highlighting/*
