--- a/.agignore
+++ b/.agignore
@@ -2,6 +2,7 @@ home/emacs.d/elpa
 home/emacs.d/contrib
 home/emacs.d/spacemacs
 home/vim/plugins
+home/vim/plugged
 home/vim/backup
 home/vim/tmp
 home/zsh/zsh-syntax-highlighting
