--- a/linters/rubocop.yml
+++ b/linters/rubocop.yml
@@ -72,13 +72,16 @@ Style/EmptyLinesAroundBlockBody:
     - no_empty_lines
 
 Style/EmptyLinesAroundClassBody:
-  EnforcedStyle: empty_lines
+  EnforcedStyle: no_empty_lines
   SupportedStyles:
     - empty_lines
     - no_empty_lines
 
 Style/EmptyLinesAroundModuleBody:
-  EnforcedStyle: empty_lines
+  EnforcedStyle: no_empty_lines
   SupportedStyles:
     - empty_lines
     - no_empty_lines
+
+Documentation:
+      Enabled: false
