--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ home/pry/themes/tomorrow*
 home/pry/themes/github*
 home/pry/themes/monokai*
 home/pry/themes/vim*
-home/emacs.d/elpa
+home/emacs.d/elpa/*
 home/lein/repl-history
 home/vim/plugins/*
 home/vim/plugged/*
