--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ home/pry/themes/github*
 home/pry/themes/monokai*
 home/pry/themes/vim*
 home/emacs.d/elpa/*
+home/emacs.d/.cask/*
 home/lein/repl-history
 home/vim/plugins/*
 home/vim/plugged/*
