--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -27,12 +27,12 @@ set-option -g renumber-windows on
 
 
 # -------- Statusbar settings ----------------------
-set -g status-bg black
+set -g status-bg default
 set -g status-fg colour237
 set -g status-interval 10
 set -g status-left '#[fg=colour221]#I:#P '
 set -g status-left-length 50
-set -g status-right '#[fg=blue]#S #[fg=colour221]jkrmr'
+set -g status-right '#[fg=blue]#S#[fg=white]%l:%M#[default]'
 set -g status-utf8 on
 set -g window-status-bg default
 set -g window-status-current-bg default
