Use prefix-esc to enter tmux copy mode

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -3,6 +3,10 @@ unbind C-b
 set -g prefix C-a
 bind-key -r C-a send-prefix
 
+# Use prefix-Esc to enter copy mode
+unbind-key [
+bind-key Escape copy-mode
+
 # improve colors
 set-option -g default-terminal "screen-256color"
 
