--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "home/emacs.d"]
 	path = home/emacs.d
 	url = https://github.com/syl20bnr/spacemacs
+[submodule "shell/k"]
+	path = shell/k
+	url = https://github.com/rimraf/k.git
