Linters: Rubocop space around = in default params

--- a/linters/rubocop.yml
+++ b/linters/rubocop.yml
@@ -52,7 +52,7 @@ Style/RegexpLiteral:
   AllowInnerSlashes: false
 
 Style/SpaceAroundEqualsInParameterDefault:
-  EnforcedStyle: no_space
+  EnforcedStyle: space
   SupportedStyles:
     - space
     - no_space
