Tmux: Update tmux config

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -89,10 +89,10 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 bind-key C-j choose-tree
 
 # fuzzy-select a session to switch to
-bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse | xargs tmux switch-client -t"
+bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
 
 # "break out" a session based on the current pane
-bind-key C-b send-keys 'tat & exit' 'C-m'
+bind-key C-b send-keys 'tmux attach & exit' 'C-m'
 
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
