Vim, Tmux: Fix italics
Closes #39

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -8,7 +8,7 @@ unbind-key [
 bind-key Escape copy-mode
 
 # improve colors
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "screen-256color-italic"
 
 # reload tmux conf
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
