--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -63,7 +63,6 @@ set -g visual-activity on
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-
 # -------- Keybinding settings ----------------------
 # Use emacs keybindings
 set-option -g status-keys "emacs"
@@ -76,17 +75,17 @@ bind-key -t vi-copy v begin-selection
 bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 
 # Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
+unbind-key -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
-
 # -------- Session navigation ------------------------
-# Jump between sessions easily
-# Hit `space` to unfold window list
-bind-key C-j choose-tree
+# Jump between sessions with prefix-C-<space>
+# Hit <space> to unfold window list, <enter> to select
+# bind-key C-Space choose-tree
 
-# fuzzy-select a session to switch to
-bind C-j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index --extended-exact | xargs tmux switch-client -t"
+# fuzzy-select another running session to switch to
+unbind-key C-j
+bind-key Space split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index --extended-exact | xargs tmux switch-client -t"
 
 # "break out" a session based on the current pane
 bind-key C-b send-keys 'tmux attach & exit' 'C-m'
@@ -98,18 +97,24 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 
 # -------- Window Creation / Navigation --------------
 # create a new window
-bind c new-window -c '#{pane_current_path}'
+bind-key c new-window -c '#{pane_current_path}'
 
 # swap windows left or right
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-# move between windows with prefix + Ctrl+h / Ctrl+l
-bind-key -r C-h select-window -t :-
-bind-key -r C-l select-window -t :+
+# move between windows with
+# prefix + emacs-ish keybindings
+bind-key -r n select-window -t :-
+bind-key -r p select-window -t :+
 
-# Use prefix + Shift + l to go to the last active window
-bind-key -r l last-window
+# Use prefix + Shift + l to go to the last active window (across sessions)
+unbind-key l
+bind-key -r S-l last-window
+
+# Restore clear screen keybind mapped over by tmux-navigator
+unbind-key C-h
+bind C-l send-keys C-l
 
 # -------- Pane Creation / Navigation ----------------
 # create a vertically split pane
