--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -1,6 +1,6 @@
 # prefix key: Ctrl+a
-unbind C-b
-set -g prefix C-a
+unbind-key C-b
+set-option -g prefix C-a
 bind-key -r C-a send-prefix
 
 # Use prefix-Esc to enter copy mode
@@ -14,10 +14,10 @@ set-option -g default-terminal "screen-256color-italic"
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # increase scrollback to 10,000 lines
-set -g history-limit 10000
+set-option -g history-limit 10000
 
 # No delay for escape key press
-set -sg escape-time 0
+set-option -sg escape-time 0
 
 # number panes and windows starting at 1
 set-window-option -g pane-base-index 1
@@ -28,16 +28,16 @@ set-option -g renumber-windows on
 
 
 # -------- Statusbar settings ----------------------
-set -g status-bg default
-set -g status-fg colour237
-set -g status-interval 10
-set -g status-left '#[fg=colour221]#I:#P '
-set -g status-left-length 50
-set -g status-right '#[fg=blue]#S #[fg=white]%l:%M#[default]'
-set -g status-utf8 on
-set -g window-status-bg default
-set -g window-status-current-bg default
-set -g window-status-current-fg colour222
+set-option -g status-bg default
+set-option -g status-fg colour237
+set-option -g status-interval 10
+set-option -g status-left '#[fg=colour221]#I:#P '
+set-option -g status-left-length 50
+set-option -g status-right '#[fg=blue]#S #[fg=white]%l:%M#[default]'
+set-option -g status-utf8 on
+set-option -g window-status-bg default
+set-option -g window-status-current-bg default
+set-option -g window-status-current-fg colour222
 
 # default window title colors
 set-window-option -g window-status-fg blue
@@ -50,14 +50,14 @@ set-option -g display-panes-active-colour blue
 set-option -g display-panes-colour brightred
 
 # message bar
-set -g message-attr bright
-set -g message-bg default
-set -g message-fg blue
-set -g display-time 2000
-set -g display-panes-time 2000
+set-option -g message-attr bright
+set-option -g message-bg default
+set-option -g message-fg blue
+set-option -g display-time 2000
+set-option -g display-panes-time 2000
 
 # Notify if other windows has activities
-set -g visual-activity on
+set-option -g visual-activity on
 
 # Automatically set window title
 set-window-option -g automatic-rename on
@@ -68,7 +68,7 @@ set-option -g set-titles on
 set-option -g status-keys "emacs"
 
 # Use vim keybindings in copy mode
-setw -g mode-keys vi
+set-window-option -g mode-keys vi
 
 # Press 'v' to begin selection and 'y' to copy to system clipboard
 bind-key -t vi-copy v begin-selection
@@ -114,7 +114,7 @@ bind-key -r S-l last-window
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
-bind C-l send-keys C-l
+bind-key C-l send-keys C-l
 
 # -------- Pane Creation / Navigation ----------------
 # create a vertically split pane
@@ -126,19 +126,19 @@ bind-key \ split-window -h  -c '#{pane_current_path}'
 # pane navigation with awareness of vim splits
 # use Ctrl + hjkl\  (without prefix key)
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 
 # -------- Pane Management ---------------------------
 # resize panes with Shift + direction key
-bind -n S-Left resize-pane -L 2
-bind -n S-Right resize-pane -R 2
-bind -n S-Down resize-pane -D 1
-bind -n S-Up resize-pane -U 1
+bind-key -n S-Left resize-pane -L 2
+bind-key -n S-Right resize-pane -R 2
+bind-key -n S-Down resize-pane -D 1
+bind-key -n S-Up resize-pane -U 1
 
 # Break current pane out to a new window
 bind-key b break-pane -d
