Tmux: Prefix-b/f for l/r window

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -87,9 +87,6 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 unbind-key C-j
 bind-key Space split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index --extended-exact | xargs tmux switch-client -t"
 
-# "break out" a session based on the current pane
-bind-key C-b send-keys 'tmux attach & exit' 'C-m'
-
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
 bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
@@ -105,8 +102,8 @@ bind-key -n C-S-Right swap-window -t +1
 
 # move between windows with
 # prefix + emacs-ish keybindings
-bind-key -r n select-window -t :-
-bind-key -r p select-window -t :+
+bind-key -r C-b select-window -t :-
+bind-key -r C-f select-window -t :+
 
 # Use prefix + Shift + l to go to the last active window (across sessions)
 unbind-key l
@@ -139,9 +136,6 @@ bind-key -n S-Left resize-pane -L 2
 bind-key -n S-Right resize-pane -R 2
 bind-key -n S-Down resize-pane -D 1
 bind-key -n S-Up resize-pane -U 1
-
-# Break current pane out to a new window
-bind-key b break-pane -d
 
 # Prompted join-pane
 bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
