--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -94,7 +94,8 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 
 # -------- Window Creation / Navigation --------------
 # create a new window
-bind-key c new-window -c '#{pane_current_path}'
+unbind c
+bind-key n new-window -c '#{pane_current_path}'
 
 # swap windows left or right
 bind-key -n C-S-Left swap-window -t -1
