--- a/linters/rubocop.yml
+++ b/linters/rubocop.yml
@@ -1,8 +1,9 @@
 # Common configuration.
+Rails:
+  Enabled: false
+
 AllCops:
-  # By default, the rails cops are not run. Override in project or home
-  # directory .rubocop.yml files, or by giving the -R/--rails option.
-  RunRailsCops: false
+  TargetRubyVersion: 2.3
 
 Style/AlignParameters:
   # Alignment of parameters in multi-line method calls.
@@ -91,3 +92,19 @@ Documentation:
 
 StringLiterals:
   EnforcedStyle: double_quotes
+
+Style/TrailingCommaInLiteral:
+  # If `comma`, the cop requires a comma after the last item in an array or
+  # hash, but only when each item is on its own line.
+  # If `consistent_comma`, the cop requires a comma after the last item of all
+  # non-empty array and hash literals.
+  EnforcedStyleForMultiline: comma
+  SupportedStyles:
+    - comma
+    - consistent_comma
+    - no_comma
+
+# Favor modifier if/unless usage when you have a
+# single-line body.
+Style/IfUnlessModifier:
+  Enabled: false
