Tmuxinator: Add italics to tmuxinator configs

--- a/home/tmuxinator/upcase.yml
+++ b/home/tmuxinator/upcase.yml
@@ -3,6 +3,8 @@
 name: upcase
 root: ~/Exercises/upcase/ruby_challenges
 pre: open https://exercises.upcase.com/exercises/ranking-poker-hands
+tmux_command: env TERM=screen-256color-italic tmux
+
 windows:
   - editor:
       layout: main-vertical
