--- a/home/tmuxinator/github.yml
+++ b/home/tmuxinator/github.yml
@@ -1,14 +1,14 @@
-# ~/.tmuxinator/base.yml
+# ~/.tmuxinator/github.yml
 
-name: base
-root: ~/Developer
+name: github
+root: ~/github/github
 tmux_command: env TERM=screen-256color-italic tmux
 
 windows:
-  - editor: vim .
+  - editor: vim +OpenSession
   - repl:
   - shell:
-  - server:
+  - server: script/server
   - dotfiles:
       root: ~/.dotfiles
       panes:
