--- a/home/tmuxinator/enterprise-manage.yml
+++ b/home/tmuxinator/enterprise-manage.yml
@@ -5,9 +5,9 @@ root: ~/github/enterprise2/enterprise-manage
 tmux_command: env TERM=screen-256color-italic tmux
 
 windows:
-  - editor: vim +OpenSession
-  - repl:
+  - editor: e +OpenSession
   - shell:
+  - repl: script/console --pry
   - server: script/server
   - dotfiles:
       root: ~/.dotfiles
