--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -90,6 +90,8 @@ bind-key f split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^
 # connected to tmux throughout.
 bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
 
+# Open a magit-like "gitsh drawer" pane to the right, close with C-d
+bind-key g split-window -h -p 50 -c '#{pane_current_path}' gitsh
 
 # -------- Window Creation / Navigation --------------
 # create a new window
