--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -122,15 +122,11 @@ bind-key - split-window -v  -c '#{pane_current_path}'
 # create a horizontally split pane
 bind-key \ split-window -h  -c '#{pane_current_path}'
 
-# pane navigation with awareness of vim splits
-# use Ctrl + hjkl\  (without prefix key)
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
-bind-key -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
-bind-key -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
-bind-key -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
-bind-key -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
-bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
+# pane navigation
+bind-key -r h select-pane -L
+bind-key -r j select-pane -D
+bind-key -r k select-pane -U
+bind-key -r l select-pane -R
 
 # -------- Pane Management ---------------------------
 # resize panes with Shift + direction key
@@ -140,7 +136,10 @@ bind-key -n S-Down resize-pane -D 1
 bind-key -n S-Up resize-pane -U 1
 
 # Prompted join-pane
-bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+# bind-key j command-prompt -p "join pane from: "  "join-pane -h -s '%%'"
+
+# Kill session
+bind-key C-q kill-session
 
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
