Tmux: Add kill-pane, display-pane bindings

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -141,6 +141,12 @@ bind-key -n S-Up resize-pane -U 1
 # Kill session
 bind-key C-q kill-session
 
+# Kill pane
+bind-key -r q kill-pane
+
+# Select pane by number
+bind-key -r p display-panes
+
 # Easily swap a pane (targeted by pane number) with the current pane
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
