Tmuxinator: Enable email previews by default

--- a/home/tmuxinator/github.yml
+++ b/home/tmuxinator/github.yml
@@ -2,7 +2,7 @@
 
 name: github
 root: ~/github/github
-pre: export GITHUB_TESTS_REAL_BROWSER=phantomjs && export BUILD_GITHUB_TAKE_SCREENSHOTS=1
+pre: export GITHUB_TESTS_REAL_BROWSER=phantomjs && export BUILD_GITHUB_TAKE_SCREENSHOTS=1 && export ENABLE_EMAIL_PREVIEWS=1
 
 windows:
   - editor: emacsclient -nw
