Tmux: Add window fuzzy selection
Fuzzy selection commands:

prefix C-j Session
prefix w Window

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -86,6 +86,10 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 unbind-key C-j
 bind-key f split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
 
+# fuzzy-select another window to switch to
+unbind-key w
+bind-key w split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
+
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
 bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-message -p "#S")" || tmux kill-session'
