Tmux: Update tmux conf with ergoxier bindings

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -84,11 +84,11 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # fuzzy-select another running session to switch to
 unbind-key C-j
-bind-key f split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
+bind-key j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
 
 # fuzzy-select another window to switch to
-unbind-key w
-bind-key w split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
+unbind-key f
+bind-key f split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
 
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
@@ -108,8 +108,8 @@ bind-key -n C-S-Right swap-window -t +1
 
 # move between windows with
 # prefix + emacs-ish keybindings
-bind-key -r C-b select-window -t :-
-bind-key -r C-f select-window -t :+
+bind-key -r [ select-window -t :-
+bind-key -r ] select-window -t :+
 
 # Use prefix + Shift + l to go to the last active window (across sessions)
 unbind-key l
