--- a/home/tmuxinator/github.yml
+++ b/home/tmuxinator/github.yml
@@ -2,10 +2,10 @@
 
 name: github
 root: ~/github/github
-pre: export GITHUB_TESTS_REAL_BROWSER=phantomjs && export BUILD_GITHUB_TAKE_SCREENSHOTS=1 && export ENABLE_EMAIL_PREVIEWS=1
+pre_window: export GITHUB_TESTS_REAL_BROWSER=phantomjs && export BUILD_GITHUB_TAKE_SCREENSHOTS=1 && export ENABLE_EMAIL_PREVIEWS=1
 
 windows:
-  - editor: emacsclient -nw
+  - editor: e
   - repl: bin/console --pry
   - server: bin/server
   - zeus: bin/zeus start
