Tmux: Use y and o for pane nav

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -106,14 +106,9 @@ bind-key n new-window -c '#{pane_current_path}'
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-# move between windows with
-# prefix + emacs-ish keybindings
-bind-key -r [ select-window -t :-
-bind-key -r ] select-window -t :+
-
-# Use prefix + Shift + l to go to the last active window (across sessions)
-unbind-key l
-bind-key -r S-l last-window
+# move between windows with prefix + h/l
+bind-key -r y select-window -t :-
+bind-key -r o select-window -t :+
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
