Tmux: Use C-j, C-k for window nav

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -107,8 +107,8 @@ bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
 # move between windows with prefix + h/l
-bind-key -r y select-window -t :-
-bind-key -r o select-window -t :+
+bind-key -r C-j select-window -t :-
+bind-key -r C-k select-window -t :+
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
