Tmux: Fix fzf window-select behavior

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -88,7 +88,7 @@ bind-key j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^
 
 # fuzzy-select another window to switch to
 unbind-key f
-bind-key f split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
+bind-key f split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --no-multi --exact --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
 
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
