Tmux: Use prefix-o for switching sessions

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -84,7 +84,7 @@ bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
 # fuzzy-select another running session to switch to
 unbind-key C-j
-bind-key j split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
+bind-key o split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
 
 # fuzzy-select another window to switch to
 unbind-key f
