--- a/home/bundle/config
+++ b/home/bundle/config
@@ -1,6 +1,6 @@
 ---
-BUNDLE_JOBS: '7'
-BUNDLE_CONSOLE: pry
-BUNDLE_GEM__COC: 'false'
-BUNDLE_GEM__MIT: 'true'
-BUNDLE_GEM__TEST: rspec
+BUNDLE_JOBS: "11"
+BUNDLE_CONSOLE: "pry"
+BUNDLE_GEM__COC: "false"
+BUNDLE_GEM__MIT: "true"
+BUNDLE_GEM__TEST: "rspec"
