--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -77,6 +77,9 @@ bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
 unbind-key -t vi-copy Enter
 bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
 
+# enables copy paste to/from system clipboard
+set -g default-command "reattach-to-user-namespace -l zsh"
+
 # -------- Session navigation ------------------------
 # Jump between sessions with prefix-C-<space>
 # Hit <space> to unfold window list, <enter> to select
