Rubocop: Enforce Rails cops, param alignment

--- a/linters/rubocop.yml
+++ b/linters/rubocop.yml
@@ -1,6 +1,6 @@
 # Common configuration.
 Rails:
-  Enabled: false
+  Enabled: true
 
 AllCops:
   TargetRubyVersion: 2.3
@@ -19,7 +19,7 @@ Style/AlignParameters:
   #
   #     method_call(a,
   #       b)
-  EnforcedStyle: with_fixed_indentation
+  EnforcedStyle: with_first_parameter
   SupportedStyles:
     - with_first_parameter
     - with_fixed_indentation
