Tmux: Fix pane nav, window fuzzy select

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -90,8 +90,8 @@ unbind-key C-j
 bind-key o split-window -v "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --tiebreak=index | xargs tmux switch-client -t"
 
 # fuzzy-select another window to switch to
-unbind-key f
-bind-key f split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --no-multi --exact --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
+unbind-key w
+bind-key w split-window -v "tmux list-windows | sed -E 's/(.*:\s\w+)\b?.+/\1/' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf-tmux -d 20 --no-sort --reverse --no-multi --exact --tiebreak=index | sed -E 's/:.+$//' | xargs tmux select-window -t"
 
 # kill the current session and switch us to another session, keeping us
 # connected to tmux throughout.
@@ -109,9 +109,9 @@ bind-key n new-window -c '#{pane_current_path}'
 bind-key -n C-S-Left swap-window -t -1
 bind-key -n C-S-Right swap-window -t +1
 
-# move between windows with prefix + h/l
-bind-key -r C-j select-window -t :-
-bind-key -r C-k select-window -t :+
+# move between windows with prefix + C-b / C-f
+bind-key -r C-b select-window -t :-
+bind-key -r C-f select-window -t :+
 
 # Restore clear screen keybind mapped over by tmux-navigator
 unbind-key C-h
@@ -125,10 +125,10 @@ bind-key - split-window -v  -c '#{pane_current_path}'
 bind-key \ split-window -h  -c '#{pane_current_path}'
 
 # pane navigation
-bind-key -r h select-pane -L
-bind-key -r j select-pane -D
-bind-key -r k select-pane -U
-bind-key -r l select-pane -R
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 # -------- Pane Management ---------------------------
 # resize panes with Shift + direction key
