--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,6 @@
 	path = home/vim/vim-plug
 	url = https://github.com/junegunn/vim-plug.git
 	branch = master
+[submodule "home/spacemacs.d/local/jekyll"]
+	path = home/spacemacs.d/local/jekyll
+	url = https://github.com/jkrmr/spacemacs-jekyll.git
