--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -66,20 +66,6 @@ set-option -g set-titles on
 # Use emacs keybindings
 set-option -g status-keys "emacs"
 
-# Use vim keybindings in copy mode
-set-window-option -g mode-keys vi
-
-# Press 'v' to begin selection and 'y' to copy to system clipboard
-bind-key -t vi-copy v begin-selection
-bind-key -t vi-copy y copy-pipe "reattach-to-user-namespace pbcopy"
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind-key -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "reattach-to-user-namespace pbcopy"
-
-# enables copy paste to/from system clipboard
-set -g default-command "reattach-to-user-namespace -l zsh"
-
 # -------- Session navigation ------------------------
 # Jump between sessions with prefix-C-<space>
 # Hit <space> to unfold window list, <enter> to select
@@ -153,4 +139,14 @@ bind-key -r p display-panes
 bind-key s display-panes\; command-prompt -p "pane #: "  "swap-pane -t '%%'"
 
 # -----------------------------------------------------------------------
+# enables copy paste to/from system clipboard
+set -g default-command "reattach-to-user-namespace -l zsh"
+
+# Use vim keybindings in copy mode
+set-window-option -g mode-keys vi
+
+# Press 'v' to begin selection and 'y' to copy to system clipboard
+bind-key -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi Enter send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
