--- a/.gitmodules
+++ b/.gitmodules
@@ -22,5 +22,5 @@
 	path = home/spacemacs.d/local/ob-elixir
 	url = https://github.com/jkrmr/ob-elixir.git
 [submodule "yankee"]
-	path = home/spacemacs.d/local/yankee
-	url = https://github.com/jkrmr/yankee.git
+	path = home/spacemacs.d/local/yankee.el
+	url = https://github.com/jkrmr/yankee.el.git
