Tmux: leader-m to open dotfiles

--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -86,6 +86,9 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 # Open a magit-like "gitsh drawer" pane to the right, close with C-d
 bind-key g split-window -h -p 50 -c '#{pane_current_path}' gitsh
 
+# Open a magit-like "dotfiles drawer" pane to the right
+bind-key m split-window -h -p 50 \; send-keys "cd ~/.dotfiles && nvim ." Enter
+
 # -------- Window Creation / Navigation --------------
 # create a new window
 unbind c
