--- a/home/tmux.conf
+++ b/home/tmux.conf
@@ -87,7 +87,7 @@ bind-key K run-shell 'tmux switch-client -n \; kill-session -t "$(tmux display-m
 bind-key g split-window -h -p 50 -c '#{pane_current_path}' gitsh
 
 # Open a magit-like "dotfiles drawer" pane to the right
-bind-key m split-window -h -p 50 \; send-keys "cd ~/.dotfiles && nvim ." Enter
+bind-key m split-window -h -p 50 \; send-keys "cd ~/.dotfiles" Enter
 
 # -------- Window Creation / Navigation --------------
 # create a new window
